--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -11,4 +11,4 @@ include::config.adoc[]
 include::paths.adoc[]
 include::groups.adoc[]
 include::read_write.adoc[]
-include::field_write_semantics.adoc[]
+include::write_functions.adoc[]
