--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -13,3 +13,4 @@ include::paths.adoc[]
 include::groups.adoc[]
 include::read_write.adoc[]
 include::write_functions.adoc[]
+include::testing.adoc[]
