--- a/docs/write_functions.adoc
+++ b/docs/write_functions.adoc
@@ -14,7 +14,7 @@ using my_field = groov::field<"field", std::uint32_t, 3, 0, groov::w::replace>;
 Built-in write functions are in the `groov::w` namespace. Examples are:
 
 - `replace` ("normal write")
-- `ignore`
+- `ignore` ("read-only" in loose parlance - but see note later)
 
 There are 16 possible write functions, each characterized by a truth table
 relating the current value *C*, the written value *W* and the result *R*. For
@@ -42,31 +42,42 @@ example:
 ^|1 ^|1 ^|1
 |===
 
-==== Identity specs
+The purpose of the write function is to control behaviour when writing, for example:
 
-Each write function may have an identity spec indicated by its truth table and
-exposed as the alias `id_spec`. For `replace`, the identity spec is `none`.
-For `ignore`, the identity spec is `any`. There are 4 possible identity specs:
+* a bus can avoid a read-modify-write by writing identity bits to a field that is not being written to by the user
+* a user can generically set or clear a field
 
-- `none`
-- `zero`
-- `one`
-- `any`
+==== Identity, Set and Clear specs
 
-Each identity spec (except `none`) has a function that computes the identity for
-a field according to its bit range:
+Each write function may have types (_mask specs_) exposed:
+
+* `id_spec`: an identity mask spec
+* `set_spec`: a set mask spec
+* `clear_spec`: a clear mask spec
+
+A valid write function _must_ have at least one of these types exposed, and _may_ have all of them.
+
+There are three possible mask specs, in the namespace `groov::m`:
+
+- `zero` (mask of zeroes)
+- `one` (mask of ones)
+- `any` (mask of X)
+
+Each mask spec has a function that computes the mask for a field according to
+its bit range:
 
 [source,cpp]
 ----
 template <std::unsigned_integral T, std::size_t Msb, std::size_t Lsb>
-constexpr static auto identity() -> T;
+constexpr static auto mask() -> T;
 ----
 
 ==== Building the write masks
 
-In general a given write to a register will only want to write some of the field
-values. The other field values are left unspecified. The write machinery uses
-the field write functions and their associated identity specs to compute:
+In the general case, a given write to a register will only want to write some of
+the field values. The other field values are left unspecified. The write
+machinery uses the field write functions and their associated identity specs to
+compute:
 
 - the write mask for the fields to be written
 - the identity mask for the other fields
@@ -95,7 +106,8 @@ constexpr auto identity_value = 0u;       // field_0 has id_spec none
 bus::template write<write_mask, identity_mask, identity_value>(/* ... */);
 ----
 
-But if the unwritten field(s) are read-only (or otherwise have an identity):
+But if the unwritten field(s) are "read-only", i.e. have the `ignore` write
+function (or otherwise have an identity):
 
 [source,cpp]
 ----
@@ -182,7 +194,7 @@ write to `F1`. This it can do with an appropriate `id_spec`:
 struct custom_write_func {
     struct id_spec {
         template <std::unsigned_integral T, std::size_t Msb, std::size_t Lsb>
-        constexpr static auto identity() -> T {
+        constexpr static auto mask() -> T {
             // sanity checks: this is just for F1
             static_assert(Msb == 7);
             static_assert(Lsb == 2);
@@ -229,7 +241,67 @@ groov::write(G{}("reg.reserved"_f = 1)) | async::sync_wait();
 // compile error: "Attempting to write to a read-only field: reserved"
 ----
 
-A write function wrapped with `read_only` in this way must have an `id_spec` that
+A write function wrapped with `read_only` in this way _must_ have an `id_spec` that
 provides its identity bits. When the register containing a read-only field is
 written, the bits provided by the `id_spec` for the read-only field(s) will be
 used.
+
+NOTE: This illustrates the difference between `ignore` (which is how the
+hardware treats writes) and `read_only` (which is an API-level decision).
+`ignore` is not `read_only` because there is no hardware prohibition on writing.
+The prohibition on writing is enforced at the API level.
+
+=== Generic writing: `set` and `clear`
+
+Fields with an appropriate `set_spec` and/or `clear_spec` in their
+`write_function` can be generically written to by asking for `set` or `clear`:
+
+[source,cpp]
+----
+// the (default) groov::w::replace write function has:
+// using set_spec = groov::m::one;
+// using clear_spec = groov::m::zero;
+
+using my_field = groov::field<"field", std::uint32_t, 1, 0>;
+using my_reg = groov::reg<"reg", std::uint32_t, 0xa'0000, groov::w::replace,
+                           my_field>;
+
+write(grp("my_reg.field"_f = groov::set));   // write all ones
+write(grp("my_reg.field"_f = groov::clear)); // write all zeroes
+----
+
+Another example: a field's write function may be `one_to_clear`.
+
+[source,cpp]
+----
+// the groov::w::one_to_clear write function has:
+// (no set_spec defined)
+// using clear_spec = groov::m::one;
+
+using my_field = groov::field<"field", std::uint32_t, 1, 0, groov::w::one_to_clear>;
+using my_reg = groov::reg<"reg", std::uint32_t, 0xa'0000, groov::w::replace,
+                           my_field>;
+
+write(grp("my_reg.field"_f = groov::set));   // error! no set_spec is defined
+write(grp("my_reg.field"_f = groov::clear)); // writes all ones
+----
+
+=== Generic writing: `enable` and `disable`
+
+Sometimes it is useful for a field's type to be an enumeration, and that field
+may have the concept of `enable` and `disable`. In this case, the field can be
+written by asking for `enable` or `disable`.
+
+[source,cpp]
+----
+enum struct E { ENABLE = 0, DISABLE = 1, OTHER = 2 };
+using my_field = groov::field<"field", E, 1, 0>;
+using my_reg = groov::reg<"reg", std::uint32_t, 0xa'0000, groov::w::replace,
+                           my_field>;
+
+write(grp("my_reg.field"_f = groov::enable));  // writes ENABLE (0)
+write(grp("my_reg.field"_f = groov::disable)); // writes DISABLE (1)
+----
+
+The enumeration may be more than one bit. It must have `ENABLE` and `DISABLE`
+values for `enable` and `disable` to work respectively.
