:art: Pass register name to read/write
Problem:
- A bus may find it useful to know the name of the register being
  read/written. That information is not yet available.

Solution:
- Pass the register name as the first template argument to read and write.

--- a/docs/read_write.adoc
+++ b/docs/read_write.adoc
@@ -149,10 +149,10 @@ is used by `read` and `write`. So it has its own `read` and `write` API.
 [source,cpp]
 ----
 struct bus {
-  template <auto Mask>
+  template <stdx::ct_string RegisterName, auto Mask>
   static auto read(auto addr) -> async::sender auto;
 
-  template <auto Mask, auto IdMask, auto IdValue>
+  template <stdx::ct_string RegisterName, auto Mask, auto IdMask, auto IdValue>
   static auto write(auto addr, auto value) -> async::sender auto;
 };
 ----
