:books: :sparkles: Add synopsis documentation
Problem:
- There is no key to which identifers are found in which headers, or what to
  `#include` to get started or use various `groov` functionality.

Solution:
- Add such guidance.

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -14,3 +14,4 @@ include::groups.adoc[]
 include::read_write.adoc[]
 include::write_functions.adoc[]
 include::testing.adoc[]
+include::synopsis.adoc[]
