--- a/docs/write_functions.adoc
+++ b/docs/write_functions.adoc
@@ -224,7 +224,14 @@ NOTE: If a register has bits that are not addressed by any fields, the identity
 values for those fields will be taken from the write function on the register
 itself.
 
-=== Read-only fields
+=== Read- and write-only semantics
+
+Fields and registers may be marked read-only and write-only. A field's semantics
+take precedence over a register's semantics: that is, the register's semantics
+will apply only to bits in the register that are not covered by fields (should
+any such bits exist).
+
+==== Read-only fields
 
 A field may be denoted read-only by marking its write function as such:
 
@@ -242,14 +249,68 @@ groov::write(G{}("reg.reserved"_f = 1)) | async::sync_wait();
 ----
 
 A write function wrapped with `read_only` in this way _must_ have an `id_spec` that
-provides its identity bits. When the register containing a read-only field is
-written, the bits provided by the `id_spec` for the read-only field(s) will be
-used.
+provides its identity bits.
 
 NOTE: This illustrates the difference between `ignore` (which is how the
 hardware treats writes) and `read_only` (which is an API-level decision).
 `ignore` is not `read_only` because there is no hardware prohibition on writing.
 The prohibition on writing is enforced at the API level.
+
+==== Write-only fields
+
+Write-only registers and fields also exist. In hardware terms, the usual case
+here is that data is not stored, but writes cause edge-trigger effects.
+
+A field may be denoted write-only by marking its write function as such:
+
+[source,cpp]
+----
+using FW = groov::field<"f", std::uint8_t, 1, 1, groov::write_only<groov::w::replace>>;
+----
+
+A write function wrapped with `write_only` in this way _cannot_ have an `id_spec` that
+provides its identity bits.
+
+If a field is marked `write_only`, it's a compile-time error to attempt to read
+from it:
+
+[source,cpp]
+----
+groov::read(G{}("reg.f"_f)) | async::sync_wait();
+// compile error: "Attempting to read from a write-only field: f"
+----
+
+Because writing happens to a register, not an individual field, it is also an
+error to write without "covering" all the bits marked as write-only. Those bits
+might be in other fields:
+
+[source,cpp]
+----
+using F0 = groov::field<"f0", std::uint8_t, 0, 0, groov::write_only<groov::w::replace>>;
+using F1 = groov::field<"f1", std::uint8_t, 1, 1, groov::write_only<groov::w::replace>>;
+
+using R = groov::reg<"reg", std::uint32_t, addr, groov::w::ignore, F0, F1>;
+
+groov::write(G{}("reg.f0"_f = 1)) | async::sync_wait();
+// compile error: "Attempting to write but missing a write-only field: f1"
+----
+
+Or they might be unused by fields, but marked by the register itself:
+
+[source,cpp]
+----
+using F = groov::field<"f0", std::uint8_t, 0, 0, groov::write_only<groov::w::replace>>;
+using R = groov::reg<"reg", std::uint32_t, addr, groov::write_only<groov::w::replace>, F>;
+
+groov::write(G{}("reg.f"_f = 1)) | async::sync_wait();
+// compile error: "Write to register reg containing write-only bits which are not provided"
+----
+
+This second case is probably an error in definition: a write-only register
+should probably either be fully covered by fields, or contain no fields. The
+normal useful case for a sparse "write-only" register is that it has an `ignore`
+write function. This avoids read-modify-write and means any unused bits just
+get written as zero.
 
 === Generic writing: `set` and `clear`
 
